# geoauditkit

./: LICENSE  README.md  environment.yml  pyproject.toml  vector_fix_report.md  vector_report.md
data/: vietnam_cleaned.dbf
data/vietnam/: vietnam.dbf
src/geoauditkit/: __init__.py  report.py  vector.py
